--- a/GAN/Normal Distribution GAN.ipynb
+++ b/GAN/Normal Distribution GAN.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,8 @@
     "    fc2 = tf.nn.tanh(tf.matmul(fc2,w2) + b2)\n",
     "    fc3 = tf.nn.tanh(tf.matmul(fc3,w3) + b3)\n",
     "    \n",
-    "    return fc3, [w1,b1,w2,b2,w3,b3]"
+    "    weights = [w1,b1,w2,b2,w3,b3]\n",
+    "    return fc3, weights"
    ]
   },
   {
@@ -115,7 +116,22 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def momentum_optimizer(loss, var_list):\n",
+    "    \"\"\"\n",
+    "    Momentum optimizer\n",
+    "    \n",
+    "    Args:\n",
+    "        loss: loss function value\n",
+    "        var_list: list of variables involved in optimization process\n",
+    "    Output:\n",
+    "        optimizer: optimization function\n",
+    "    \"\"\"\n",
+    "    batch = tf.Variable(0)\n",
+    "    learning_rate = tf.train.exponential_decay(0.001, batch, maxIter//4, 0.95, staircase = True) #learning rate decay\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
